[package]
name = "ipaddr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ctrlc]
version = "3.4.2"
default-features = false

[dependencies.crossterm]
version = "0.27.0"
default-features = false
features = ["windows"]

[profile.release]
strip = true # Automatically strip symbols from the binary

# opt-level = 3 # Optimize for size/speed

#    0: no optimizations
#    1: basic optimizations
#    2: some optimizations
#    3: all optimizations
#    "s": optimize for binary size
#    "z": optimize for binary size, but also turn off loop vectorization.

lto = true        # Enable link time optimization
debug = false     # Controls the amount of debug information
codegen-units = 1 # Maximize speed and size reduction optimization
